rendering library built

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 
 ext {
     arcoreVersion = '1.0.0'
+    javagl = '0.2.1'
 }
 
 dependencies {
@@ -31,7 +32,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //ARCore
     implementation "com.google.ar:core:$arcoreVersion"
+    implementation "de.javagl:obj:$javagl"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
