redraw on camera view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    //ARCoreActivity
+    //CameraDrawActivity
     implementation "com.google.ar:core:$arcoreVersion"
     implementation "de.javagl:obj:$javagl"
 
