initial work began

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation "com.google.ar:core:$arcoreVersion"
     implementation "de.javagl:obj:$javagl"
 
+    //Viro core
+    implementation project(':viro_core')
+
+    implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
